--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 .struc{
     padding-left: 390px;
     padding-right: 390px;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: .05rem;
+}
+#bar{
+    position: fixed;
 }
 
 .topbar{
@@ -8,7 +13,7 @@
     display: flex;
     justify-content: space-between;
     cursor: pointer;
-  
+
 
 }
 .rTop{
@@ -17,6 +22,7 @@
     font-weight:400px ;
     color:grey;
     font-size: 16px;
+   
 }
 .rTop:hover{
     color: rgb(8, 181, 250);
@@ -69,4 +75,165 @@
 }
 #sign:hover{
     background-color: black;
+}
+
+.sMid{
+    padding-top:150px;
+    display: flex;
+    justify-content: space-between;
+}
+#para{
+    font-size: 20px;
+    padding-top: 25px;
+ 
+}
+
+#nextP{
+    font-size: 16px;
+    color: grey;
+}
+
+.textmiddle{
+    padding-right: 30px;
+}
+
+.bottomnav{
+    padding-top: 22px;
+    display: flex;
+    justify-content: space-around;
+}
+#firstnav{
+    padding-left: 25px;
+    color: #387ed1;
+    cursor: pointer;
+}
+#firstnav:hover{
+    color: black;
+   
+}
+#secnav{
+    margin-left: -190px;
+    color: #387ed1;
+    cursor: pointer;
+}
+#secnav:hover{
+    color: black;
+}
+
+#photobottom{
+    padding-top: 70px ;
+    display: flex;
+    justify-content: center;
+}
+
+.uppbott{
+    display: flex;
+    justify-content: space-around;
+    padding-top: 100px;
+}
+#leftbott{
+  
+}
+.imgbott{
+   display: flex;
+   justify-content: space-evenly;
+   padding-top: 76px;
+   
+
+}
+#downtext{
+    display: flex;
+    justify-content: space-around;
+}
+#lekha{
+    margin-top: 35px;
+    margin-left: -12px;
+    font-size: 10px;
+    color: grey;
+    padding-right: 26px;
+}
+.abvft{
+    padding-top: 150px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#lekhanicher{
+    font-size:16px ;
+   padding-top: 5px;
+
+}
+#lekhanicher:hover{
+    color: black;
+}
+.tophead{
+    display: flex;
+    justify-content: center;
+}
+
+.footer{
+    display: flex;
+    justify-content: space-around;
+    font-size: 16px;
+    padding-top: 40px;
+}
+
+#nt{
+    color: rgb(104, 100, 100);
+    cursor: pointer;
+}
+
+#nt:hover{
+    color: #387ed1;
+}
+
+#pic{
+    padding-top: 10px;
+   height: 18px; 
+   width: 18px;
+   padding-right: 25px;
+   filter: invert(50%) sepia(0%) saturate(2834%) hue-rotate(332deg) brightness(101%) contrast(70%);
+   cursor: pointer;
+  
+}
+#pic:hover{
+    color: blue;
+}
+
+.bottomlekha{
+
+    color: rgb(199, 197, 197);
+    font-size: 10px;
+}
+
+.end{
+    padding-top: 25px;
+    padding-bottom: 25px;
+    padding-left:30px ;
+    padding-right: 30px;
+    display: flex;
+    justify-content: space-around;
+    font-size: 12px;
+    color: rgb(149, 148, 148);
+    cursor: pointer;
+}
+
+#click:hover{
+ color: #387ed1;
+}
+#kala{
+    cursor: pointer;
+}
+#kala:hover{
+color: black;
+}
+
+.janina{
+    color: #387ed1;
+    cursor: pointer;
+   text-decoration: none;
+}
+
+.janina:hover{
+    color: black;
 }
